--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta
-      meta
       name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+      content="user-scalable=no, width=device-width, initial-scale=1.0"
     />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>Vite + React</title>
   </head>
   <body>
